--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "three": "^0.160.1"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.34",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -32,6 +34,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "slice-machine-ui": "^1.23.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
